<resources>
    <string name="app_name">Coin Flip App Data Binding Version</string>
    <string name="switch_text">Simulation Mode</string>
    <string name="icon_description">An icon to reprersent the state of a coin flipflop</string>
    <string name="flip_button_text">Flip</string>
    <string name="reset_button_text">Reset</string>
    <string name="placeholder_text_total_flips">Total Flips</string>
    <string name="placeholder_text_total_flipss">Total Flips: 0</string>
    <string name="placeholder_text_total_heads">Total heads: 0</string>
    <string name="placeholder_text_total_tails">Total Tails: 0</string>
    <string name="placeholder_text_heads_percent">Heads: 0%</string>
    <string name="placeholder_text_tails_percent">Tai8ls: 0%</string>
    <string name="placeholder_text_head_percent">Heads: 0%</string>
    <string name="placeholder_text_tail_percent">Tails: 0%</string>
    <string name="sim_number_hint">Flips to Sim</string>
    <string name="simulate_button_text">Simulate</string>
    <string name="button">Button</string>
</resources>